# Aulas/Aula10/swagger.yaml
@@ -15,6 +15,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ArrayOfProdutos"
+      security:
+        -  JWTAuth: []
     post:
       tags:
         - produtos
@@ -129,3 +131,10 @@ components:
       type: array
       itens:
         $ref: '#/components/schemas/Produto'
+  securityScheme
+  
+  s: 
+    JWTAuth: 
+      type: apiKey
+      in: header
+      name: Authorization
